# translate-middleware

./: .gitignore  README.md  config.default.toml  package-lock.json  package.json  playwright.config.js  pyproject.toml
benchmarks/: run.py
browser_extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js  styles.css
browser_extension/tests/: test_extension.spec.js
browser_extension/tests/mock_pages/: chatgpt_mock.html  claude_mock.html
cli/: ko_translate_cli.py
docs/: DEPLOYMENT.md
src/ko_translate/: __init__.py  config.py  context.py  engine.py  korean_detector.py  logging_config.py  preservation.py  proxy.py  server.py
tests/: conftest.py  test_chaos.py  test_config.py  test_context.py  test_engine.py  test_korean_detector.py  test_preservation.py  test_server_live.py
