[project]
name = "ko-translate-middleware"
version = "1.0.0"
description = "Bidirectional Korean-English translation middleware for LLM APIs"
requires-python = ">=3.10"
dependencies = [
    "toml>=0.10.2",
    "httpx>=0.27.0",
    "openai>=1.12.0",
    "uvicorn>=0.29.0",
    "starlette>=0.37.0",
    "sse-starlette>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.scripts]
ko-translate = "ko_translate.cli:main"
ko-proxy = "ko_translate.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"